[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/godot_db_manager/assets/fnt/roboto_18.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/godot_db_manager/assets/tex/gui.png" type="Texture" id=2]
[ext_resource path="res://addons/godot_db_manager/table_item.gd" type="Script" id=3]
[ext_resource path="res://addons/godot_db_manager/assets/tex/debug.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 28, 2, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 28, 54, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 28, 28, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 54, 2, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 54, 54, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 54, 28, 24, 24 )

[node name="table_item" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.021
margin_bottom = 0.399998
rect_min_size = Vector2( 180, 34 )
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 34.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 170.0 ]
}

[node name="dbg" type="NinePatchRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
region_rect = Rect2( 38, 38, 10, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select" type="NinePatchRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
region_rect = Rect2( 80, 6, 24, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="table_name" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.10352e-05
margin_bottom = -4.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Table_999"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select_btn" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit_table_btn" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -56.0
margin_top = 5.0
margin_right = -32.0
margin_bottom = -5.0
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="delete_table_btn" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.0
margin_top = 5.0
margin_right = -4.0
margin_bottom = -5.0
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
